--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
@@ -182,7 +182,7 @@
                     </div>
                 </MudTd>
                 <MudTd>
-                    @if (context.Status == RaceStatus.Racing && context.SingleOccurrence == null)
+                    @if (context.Status == RaceStatus.Racing)
                     {
                         <GradientColour Min="@lastLowestScore" Max="@lastHighestScore" Value="@context.LastScore">
                             <MudText Typo="Typo.caption" Color="Color.Inherit">@context.LastScore</MudText>
@@ -190,7 +190,7 @@
                     }
                     else
                     {
-                        <MudText Typo="Typo.button" Color="Color.Warning">@context.SingleOccurrence</MudText>
+                        <MudText Typo="Typo.button" Color="Color.Warning">OUT</MudText>
                     }
                 </MudTd>
                 <MudTd>
