--- a/SimTECH/SimTECH/Pages/Leagues/ContractManager/Index.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/ContractManager/Index.razor
@@ -10,7 +10,7 @@
 @inject NavigationManager _nav
 @inject ISnackbar _snack
 
-<PageTitle>Contract manager</PageTitle>
+<PageTitle>Contracts</PageTitle>
 
 <MudContainer MaxWidth="MaxWidth.ExtraExtraLarge" Class="mt-4">
     @if (League != null)
@@ -71,7 +71,7 @@
         {
             new BreadcrumbItem("Home", href: "/"),
             new BreadcrumbItem("Leagues", href: "leagues"),
-            new BreadcrumbItem("Contract manager", href: "contractmanager", disabled: true),
+            new BreadcrumbItem("Contracts", href: "contractmanager", disabled: true),
         });
 
         League = await _leagueService.GetLeagueById(LeagueId);
