--- a/SimTECH/SimTECH/Pages/Tracks/Index.razor
+++ b/SimTECH/SimTECH/Pages/Tracks/Index.razor
@@ -44,8 +44,13 @@
             <TemplateColumn T="Track" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup>
-                        <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateTrack(context.Item))" />
-                        <MudIconButton Size="@Size.Small" Icon="@Icons.Material.Outlined.Delete" Color="Color.Error" OnClick="@(async () => await DeleteTrack(context.Item))" />
+                        <MudIconButton Size="@Size.Small"
+                                       Icon="@Icons.Material.Outlined.Edit"
+                                       OnClick="@(() => UpdateTrack(context.Item))" />
+                        <MudIconButton Size="@Size.Small"
+                                       Icon="@Icons.Material.Outlined.Delete"
+                                       Color="Color.Error"
+                                       OnClick="@(() => DeleteTrack(context.Item))" />
                     </MudButtonGroup>
                 </CellTemplate>
             </TemplateColumn>
