--- a/SimTECH/SimTECH/Pages/Traits/Index.razor
+++ b/SimTECH/SimTECH/Pages/Traits/Index.razor
@@ -41,9 +41,11 @@
             <TemplateColumn T="Trait" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup>
-                        <StateTogglerButton CallbackToggled="@(async (bool toggled) => await OnToggleChange(context.Item, toggled))"
+                        <MudIconButton Size="Size.Small"
+                                       Icon="@Icons.Material.Outlined.Edit"
+                                       OnClick="@(() => UpdateItem(context.Item))" />
+                        <StateTogglerButton CallbackToggled="@((bool toggled) => OnToggleChange(context.Item, toggled))"
                                             Default="@(context.Item.State == State.Active)" />
-                        <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateItem(context.Item))" />
                     </MudButtonGroup>
                 </CellTemplate>
             </TemplateColumn>
