--- a/SimTECH/SimTECH/Pages/Drivers/Dialogs/DriverDetailStat.razor
+++ b/SimTECH/SimTECH/Pages/Drivers/Dialogs/DriverDetailStat.razor
@@ -65,7 +65,7 @@
 
     private List<League> Leagues { get; set; } = new();
 
-    private DataSet PositionData { get; set; } = new DataSet { Label = "Scored positions" };
+    private ChartData PositionData { get; set; } = new ChartData { Label = "Scored positions" };
 
     private ApexCharts.ApexChart<DataPoint> PositionChart { get; set; }
 
