--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/SeasonDevelopChartDialog.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Dialogs/SeasonDevelopChartDialog.razor
@@ -39,7 +39,7 @@
     [CascadingParameter] protected MudDialogInstance? ChartDialog { get; set; }
 
     [Parameter]
-    public List<DataSet> DataSets { get; set; } = new();
+    public List<ChartData> DataSets { get; set; } = new();
 
     [Parameter]
     public Aspect Aspect { get; set; }
