--- a/SimTECH/SimTECH/Pages/RaceWeek/Dialogs/PositionChangeChart.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Dialogs/PositionChangeChart.razor
@@ -48,8 +48,8 @@
 
     private ApexCharts.ApexChartOptions<DataPoint> options;
 
-    private List<DataSet> dataSets = new();
-    private DataSet retiredSet = new()
+    private List<ChartData> dataSets = new();
+    private ChartData retiredSet = new()
         {
             Label = "Retirements",
             Stroke = new ApexCharts.SeriesStroke
@@ -77,7 +77,7 @@
 
         foreach (var driver in Drivers)
         {
-            var dataSet = new DataSet { Label = driver.FullName };
+            var dataSet = new ChartData { Label = driver.FullName };
 
             options.Yaxis.Add(
                 new ApexCharts.YAxis
