--- a/SimTECH/SimTECH/Pages/Drivers/Index.razor
+++ b/SimTECH/SimTECH/Pages/Drivers/Index.razor
@@ -121,9 +121,7 @@
         return false;
     };
 
-    // Displayable helpers
-    private string ReadActiveLeague(long driverId) =>
-        CurrentDrivers.Find(e => e.DriverId == driverId)?.LeagueName ?? "None";
+    private string ReadActiveLeague(long driverId) => CurrentDrivers.Find(e => e.DriverId == driverId)?.LeagueName ?? "None";
 
     private async Task ShowDetailData(Driver driver)
     {
