--- a/SimTECH/SimTECH/Pages/Incidents/Dialogs/IncidentEditor.razor
+++ b/SimTECH/SimTECH/Pages/Incidents/Dialogs/IncidentEditor.razor
@@ -8,7 +8,7 @@
 
             <div>
                 <MudText Typo="Typo.subtitle2">Category</MudText>
-                @if (Model.Id == 0)
+                @if (Model.Id == default)
                 {
                     <MudChipSet @bind-SelectedChip="categoryChip" Mandatory="true">
                         @foreach (var cat in IncidentCategoryEnumHelper.GetIncidentCategories)
