--- a/SimTECH/SimTECH/Pages/Leagues/Dialogs/LeagueEditor.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/Dialogs/LeagueEditor.razor
@@ -164,6 +164,9 @@
                     <MudNumericField @bind-Value="Model.DriverStatusPaceModifier"
                                      Min="0"
                                      Label="Main/support driver pace modifier" />
+                    <MudNumericField @bind-Value="Model.SetupRng"
+                                     Min="0"
+                                     Label="Max. setup score to gain per practice session" />
                 </MudItem>
                 <MudItem xs="8" Style="min-height: 500px">
                     <MudText Typo="Typo.subtitle1">Weighted development ranges</MudText>
