--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -460,19 +460,23 @@ th {
 }
 
 /* inputs */
-.field-xs, .field-xs > * {
+.field-xs,
+.field-xs > * {
     width: 75px;
 }
 
-.field-sm, .field-sm > * {
+.field-sm,
+.field-sm > * {
     width: 200px;
 }
 
-.field-md, .field-md > * {
+.field-md,
+.field-md > * {
     width: 400px;
 }
 
-.field-lg, .field-lg > * {
+.field-lg,
+.field-lg > * {
     width: 800px;
 }
 
@@ -692,4 +696,3 @@ th {
     font-family: ShogunsClan !important;
     font-size: 3em;
 }
-
