i may or may not have implemented strat preferences

--- a/SimTECH/SimTECH/Pages/RaceWeek/Index.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Index.razor
@@ -26,7 +26,7 @@
     <MudPaper Elevation="100">
         <MudLoading Loading="@Loading"
                     LoaderType="LoaderType.Circular"
-                    Text="Have some patience, mate. Preparing the goods for ya.">
+                    Text="Have some patience, mate.">
             <CascadingValue Value="@Model">
                 <MudTabs Centered="true" Outlined="true">
                     <MudTabPanel Text="Raceweek">
