fixed a few things

--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
@@ -103,7 +103,7 @@
                         </PenaltyBadge>
                     </MudTd>
                     <MudTd>
-                        <MudText Typo="Typo.caption">@context.ExpectedPosition</MudText>
+                        <MudText Typo="Typo.caption" Class="gradient-indicator">@context.ExpectedPosition</MudText>
                     </MudTd>
                     <MudTd Class="accent-cell">
                         <SmolAccent Colour="@context.Colour" />
