--- a/SimTECH/SimTECH/Pages/Test/Index.razor
+++ b/SimTECH/SimTECH/Pages/Test/Index.razor
@@ -1,5 +1,6 @@
 ﻿@page "/test"
 
+@using MudExtensions.Enums
 @using SimTECH.Pages.Test.Components
 
 @inject BreadcrumbProvider _bread
@@ -11,7 +12,7 @@
 
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-16 px-8 cubic-repeat-bg">
     <MudLoading @bind-Loading="loading"
-                LoaderType="MudExtensions.Enums.LoaderType.Circular"
+                LoaderType="LoaderType.Circular"
                 Text="Page is being loaded, some patience please. umu"
                 Class="loader">
         <MudGrid>
