--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -323,6 +323,12 @@ th {
     flex: 1 1 0;
 }
 
+.gradient-indicator {
+    /* used colours naming in order: temp-default(bg) -> colour -> accent */
+    background: linear-gradient(to top left, var(--mud-palette-surface) 49.5%, var(--mud-palette-primary) 50.5%);
+    color: var(--mud-palette-secondary);
+}
+
 .loader {
     position: relative;
 }
