--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/UsedComponents.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Dialogs/UsedComponents.razor
@@ -70,12 +70,17 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter] protected MudDialogInstance? StatDialog { get; set; }
+    [CascadingParameter]
+    protected MudDialogInstance? StatDialog { get; set; }
 
-    [Parameter] public IEnumerable<SeasonDriver> SeasonDrivers { get; set; } = Enumerable.Empty<SeasonDriver>();
-    [Parameter] public IEnumerable<SeasonTeam> SeasonTeams { get; set; } = Enumerable.Empty<SeasonTeam>();
-    [Parameter] public IEnumerable<Result> Results { get; set; } = Enumerable.Empty<Result>();
-    [Parameter] public IEnumerable<Incident> Incidents { get; set; } = Enumerable.Empty<Incident>();
+    [Parameter]
+    public IEnumerable<SeasonDriver> SeasonDrivers { get; set; } = Enumerable.Empty<SeasonDriver>();
+    [Parameter]
+    public IEnumerable<SeasonTeam> SeasonTeams { get; set; } = Enumerable.Empty<SeasonTeam>();
+    [Parameter]
+    public IEnumerable<Result> Results { get; set; } = Enumerable.Empty<Result>();
+    [Parameter]
+    public IEnumerable<Incident> Incidents { get; set; } = Enumerable.Empty<Incident>();
 
     private List<UsedParts> UsedComponentParts { get; set; }
     private List<Incident> PenalizableIncidents { get; set; }
