--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Tabs/PowerRankings.razor
@@ -109,6 +109,8 @@
 
         Traits = await _traitService.GetTraits(StateFilter.All);
 
+        RestorePowerRanking();
+
         Loading = false;
     }
 
